<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    tools:context=".PerfilUsuarioActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/main_toolbar" />

        <!--Acá irían el resto de las cosas que tiene la app-->


        <ImageView

            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margenSup_imagenUsuario"
            android:layout_marginBottom="10dp"
            android:src="@drawable/imgperfil" />

        <TextView
            android:id="@+id/tv_nombreUsuario"
            style="@style/nombreUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:text="@string/usernamePlaceholder"
            android:textAlignment="center"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/tv_emailUsuario"
            style="@style/emailUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:text="@string/emailPlaceHolder"
            android:textAlignment="center"
            android:textSize="17sp" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="7dp"
            android:background="?android:attr/listDivider"
            android:backgroundTint="@color/principal"
            android:backgroundTintMode="screen" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:gravity="center"
            android:background="@color/white"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_outline_lock_black" />

                <TextView
                    android:id="@+id/cambiarContra"
                    style="@style/opcionesUsuario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/cambiarContrasenia"
                    android:textAlignment="center" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"

                    android:src="@drawable/ic_baseline_exit_to_app_24" />

                <TextView
                    android:id="@+id/cerrarSesion"
                    style="@style/opcionesUsuario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/cerrarSesion"
                    android:textAlignment="center" />

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/white">

        <include layout="@layout/main_nav_drawer" />
    </RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>
